@@ -18,7 +18,6 @@ HTTP::Date = 6
 IO::Compress::Brotli = 0.004001
 IO::Compress::Bzip2 = 2.021
 IO::Uncompress::Brotli = 0.004001
-IO::Uncompress::Bunzip2 = 2.021
 LWP::MediaTypes = 6
 MIME::Base64 = 2.1
 perl = 5.008001
